// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders community 1`] = `
<div
  className="MainLayout-root Community-root"
  data-testid="community-container"
>
  <div
    className="HorizontalGutter-root HorizontalGutter-double"
  >
    <div
      className="Flex-root Flex-flex Flex-doubleItemGutter"
    >
      <fieldset
        className="FieldSet-root"
      >
        <legend
          className="Typography-root Typography-bodyCopyBold Typography-colorTextPrimary UserTableFilter-legend"
        >
          Search
        </legend>
        <div
          className="TextField-root"
        >
          <input
            aria-label="Search by username or email address"
            className="TextField-input UserTableFilter-textField TextField-colorRegular"
            placeholder="Search by username or email address..."
            type="text"
          />
        </div>
      </fieldset>
      <fieldset
        className="FieldSet-root"
      >
        <legend
          className="Typography-root Typography-bodyCopyBold Typography-colorTextPrimary UserTableFilter-legend"
        >
          Show Me
        </legend>
        <span
          className="SelectField-root"
        >
          <select
            aria-label="Search by role"
            className="SelectField-select"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value=""
          >
            <option
              value=""
            >
              Everyone
            </option>
            <optgroup
              label="Audience"
            >
              <option
                value="COMMENTER"
              >
                Commenters
              </option>
            </optgroup>
            <optgroup
              label="Organization"
            >
              <option
                value="ADMIN"
              >
                Admins
              </option>
              <option
                value="MODERATOR"
              >
                Moderators
              </option>
              <option
                value="STAFF"
              >
                Staff
              </option>
            </optgroup>
          </select>
          <span
            aria-hidden={true}
            className="SelectField-afterWrapper"
          >
            <span
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              expand_more
            </span>
          </span>
        </span>
      </fieldset>
    </div>
    <div
      className="HorizontalGutter-root HorizontalGutter-double"
    >
      <table
        className="Table-root Table-fullWidth"
      >
        <thead
          className="TableHead-root"
        >
          <tr
            className="TableRow-root"
          >
            <th
              className="TableCell-root UserTable-usernameColumn TableCell-header"
            >
              Username
            </th>
            <th
              className="TableCell-root UserTable-emailColumn TableCell-header"
            >
              Email
            </th>
            <th
              className="TableCell-root UserTable-memberSinceColumn TableCell-header"
            >
              Member Since
            </th>
            <th
              className="TableCell-root UserTable-roleColumn TableCell-header"
            >
              Role
            </th>
          </tr>
        </thead>
        <tbody
          className="TableBody-root"
        >
          <tr
            className="TableRow-root TableRow-body"
          >
            <td
              className="TableCell-root UserRow-usernameColumn TableCell-body"
            >
              Markus
            </td>
            <td
              className="TableCell-root UserRow-emailColumn TableCell-body"
            >
              <a
                className="TextLink-root"
                href="mailto:markus@test.com"
              >
                markus@test.com
              </a>
            </td>
            <td
              className="TableCell-root UserRow-memberSinceColumn TableCell-body"
            >
              07/06/2018
            </td>
            <td
              className="TableCell-root UserRow-roleColumn TableCell-body"
            >
              <span
                className="RoleText-root"
              >
                Admin
              </span>
            </td>
          </tr>
          <tr
            className="TableRow-root TableRow-body"
          >
            <td
              className="TableCell-root UserRow-usernameColumn TableCell-body"
            >
              Lukas
            </td>
            <td
              className="TableCell-root UserRow-emailColumn TableCell-body"
            >
              <a
                className="TextLink-root"
                href="mailto:lukas@test.com"
              >
                lukas@test.com
              </a>
            </td>
            <td
              className="TableCell-root UserRow-memberSinceColumn TableCell-body"
            >
              07/06/2018
            </td>
            <td
              className="TableCell-root UserRow-roleColumn TableCell-body"
            >
              <div
                className="Popover-root"
              >
                <button
                  aria-label="Change role"
                  className="BaseButton-root Button-root RoleChange-button Button-sizeSmall Button-colorRegular Button-variantRegular"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span
                    className="RoleText-root"
                  >
                    Moderator
                  </span>
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-lg ButtonIcon-root"
                  >
                    arrow_drop_down
                  </span>
                </button>
                <div
                  aria-hidden={true}
                  aria-labelledby="community-roleChange-ariainfo"
                  id="community-roleChange"
                  role="popup"
                >
                  <div
                    className="AriaInfo-root"
                    id="community-roleChange-ariainfo"
                  >
                    A dropdown to change the user role
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renders empty community 1`] = `
<div
  className="MainLayout-root Community-root"
  data-testid="community-container"
>
  <div
    className="HorizontalGutter-root HorizontalGutter-double"
  >
    <div
      className="Flex-root Flex-flex Flex-doubleItemGutter"
    >
      <fieldset
        className="FieldSet-root"
      >
        <legend
          className="Typography-root Typography-bodyCopyBold Typography-colorTextPrimary UserTableFilter-legend"
        >
          Search
        </legend>
        <div
          className="TextField-root"
        >
          <input
            aria-label="Search by username or email address"
            className="TextField-input UserTableFilter-textField TextField-colorRegular"
            placeholder="Search by username or email address..."
            type="text"
          />
        </div>
      </fieldset>
      <fieldset
        className="FieldSet-root"
      >
        <legend
          className="Typography-root Typography-bodyCopyBold Typography-colorTextPrimary UserTableFilter-legend"
        >
          Show Me
        </legend>
        <span
          className="SelectField-root"
        >
          <select
            aria-label="Search by role"
            className="SelectField-select"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value=""
          >
            <option
              value=""
            >
              Everyone
            </option>
            <optgroup
              label="Audience"
            >
              <option
                value="COMMENTER"
              >
                Commenters
              </option>
            </optgroup>
            <optgroup
              label="Organization"
            >
              <option
                value="ADMIN"
              >
                Admins
              </option>
              <option
                value="MODERATOR"
              >
                Moderators
              </option>
              <option
                value="STAFF"
              >
                Staff
              </option>
            </optgroup>
          </select>
          <span
            aria-hidden={true}
            className="SelectField-afterWrapper"
          >
            <span
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              expand_more
            </span>
          </span>
        </span>
      </fieldset>
    </div>
    <div
      className="HorizontalGutter-root HorizontalGutter-double"
    >
      <table
        className="Table-root Table-fullWidth"
      >
        <thead
          className="TableHead-root"
        >
          <tr
            className="TableRow-root"
          >
            <th
              className="TableCell-root UserTable-usernameColumn TableCell-header"
            >
              Username
            </th>
            <th
              className="TableCell-root UserTable-emailColumn TableCell-header"
            >
              Email
            </th>
            <th
              className="TableCell-root UserTable-memberSinceColumn TableCell-header"
            >
              Member Since
            </th>
            <th
              className="TableCell-root UserTable-roleColumn TableCell-header"
            >
              Role
            </th>
          </tr>
        </thead>
        <tbody
          className="TableBody-root"
        />
      </table>
      <p
        className="Typography-root Typography-bodyCopyBold Typography-colorTextPrimary Typography-alignCenter EmptyMessage-root"
      >
        We could not find anyone in your community matching your criteria.
      </p>
    </div>
  </div>
</div>
`;
